# bitcoin-mock

./: Cargo.toml  README.md  config_client.txt  config_server.txt
config_tests/: config1.txt  config_ips.txt  example2.txt  invalid_ip.txt  invalid_line.txt  invalid_port.txt  missing_date_fields.txt  missing_fields.txt  not_numeric_dates.txt  permission_denied.txt  repeated1.txt  repeated2.txt
src/: lib.rs  main_00.rs  main_01.rs  main_02.rs
src/interface/: add_new_wallet.glade  add_new_wallet.glade~  error_no_wallet.glade~  error_window.glade  graphic_interface.glade  graphic_interface.glade~  graphics.rs  gui_handler.rs  init_window.glade  init_window.glade~  mod.rs  proof_of_inclusion.glade  proof_of_inclusion.glade~  tx_window.glade  tx_window.glade~
src/server/: blockdownload.rs  blockgetter.rs  blocks.rs  handshake.rs  logfile.rs  merkletree.rs  messages.rs  mod.rs  networklistener.rs  node.rs  utxos.rs
src/user/: login.rs  mod.rs  wallet.rs
src/utils/: compact_size.rs  config.rs  errors.rs  mod.rs  tx.rs  wallet_messages.rs
tests/: integration_test.rs
tests/some_blocks/: block1  block2  block3  block4  block5
