[package]
name = "bitcoin-pr"
version = "0.1.0"
edition = "2021"

[lib]
name = "tp_bitcoins"
path = "src/lib.rs"

[[bin]]
name = "node_server"
path = "src/main_00.rs"

[[bin]]
name = "wallet"
path = "src/main_01.rs"

[[bin]]
name = "node_client"
path = "src/main_02.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.5.0"
chrono = "0.4"
rand = {version = "0.8.5", features = ["std"]}
bitcoin_hashes = {version = "0.12.0",features = ["std"]}
indicatif = "0.17.5"

secp256k1 = {version = "0.27.0", features= ["rand","bitcoin-hashes-std", "global-context"]}

hex = "0.4.3"
local-ip-address= "0.5.3"
glib = "0.10"
gtk = {version = "0.17.1"} 